--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="" <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
   <link rel="stylesheet" href="{{ 'mobile.css' | asset_url }}" media="(max-width: 768px)">
-  <link rel="stylesheet" href="{{ 'cart-sidepanel.css' | asset_url }}"
-  >n">
+  <link rel="stylesheet" href="{{ 'cart-sidepanel.css' | asset_url }}">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
