--- a/assets/theme.css
+++ b/assets/theme.css
@@ -35,7 +35,7 @@ body {
 }
 
 #smooth-content {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
 }
@@ -486,6 +486,12 @@ span {
   border-radius: 4px;
 }
 
+@media (max-width: 768px) {
+  .footer-image {
+    height: 300px;
+  }
+}
+
 .footer-image img {
   width: 100%;
   height: 100%;
@@ -516,6 +522,12 @@ span {
   color: var(--color-brand-cream);
   text-transform: uppercase;
   letter-spacing: 4px;
+}
+
+@media (max-width: 768px) {
+  .footer-image__text-content {
+    font-size: 35px;
+  }
 }
 
 @keyframes scroll-text {
