--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -185,6 +185,7 @@
       flex-direction: column;
       gap: 40px;
       padding: 0 20px;
+      align-items: unset;
     }
 
     .contact-form__title {
