--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -314,7 +314,7 @@
     margin: 0.5rem 0 0 2rem;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 10px;
     max-height: 0;
     overflow: hidden;
     opacity: 0;
@@ -509,13 +509,14 @@
       font-size: 24px;
     }
     .menu-right {
-      text-align: center;
+      /* text-align: center; */
     }
     .menu-right-msg {
       font-size: 15px;
-      margin-bottom: 40px;
-      text-align: center;
-      margin: 0 auto;
+      margin-bottom: 10px;
+      text-align: left;
+      /* margin: 0 auto; */
+      max-width: 70%;
     }
   }
 {% endstyle %}
@@ -535,12 +536,17 @@
   <div class="header-content">
     {% comment %} {% render 'icon-button', icon: 'search.svg', label: 'Search' %} {% endcomment %}
     {% if customer %}
-      {% render 'icon-button', icon: 'person.svg', label: 'Account', url: routes.account_url %}
+      {% render 'icon-button', icon: 'person.svg', label: 'Account', url: routes.account_url, hide_text_mobile: true %}
     {% else %}
-      {% render 'icon-button', icon: 'person.svg', label: 'Log In', url: routes.account_login_url %}
+      {% render 'icon-button',
+        icon: 'person.svg',
+        label: 'Log In',
+        url: routes.account_login_url,
+        hide_text_mobile: true
+      %}
     {% endif %}
     <div id="header-cart-button" data-cart-open>
-      {% render 'icon-button', icon: 'cart.svg', label: 'Cart' %}
+      {% render 'icon-button', icon: 'cart.svg', label: 'Cart', hide_text_mobile: true %}
       <div class="cart-badge{% if cart.item_count > 0 %} visible{% endif %}">
         <span>{{ cart.item_count }}</span>
       </div>
@@ -618,10 +624,11 @@
             </a>
           {% endif %}
         </div>
-        <p class="menu-right-msg">
-          Our essential oils capture <br>
-          nature in its purest.
-        </p>
+        {% if section.settings.menu_right_msg %}
+          <p class="menu-right-msg">
+            {{ section.settings.menu_right_msg }}
+          </p>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -647,6 +654,12 @@
       "id": "menu_text",
       "label": "Menu Text",
       "default": "Our essential oils capture nature in its purest, most expansive form. Sourced from organic gardens and carefully distilled into refillable, eco-friendly bottles, each drop is an invitation to indulge in the art of mindful wellness."
+    },
+    {
+      "type": "textarea",
+      "id": "menu_right_msg",
+      "label": "Menu Bottom Message",
+      "default": "Our essential oils capture nature in its purest."
     },
     {
       "type": "url",
