--- a/sections/scroll-video.liquid
+++ b/sections/scroll-video.liquid
@@ -76,7 +76,8 @@
           muted: true,
           playsinline: true,
           preload: 'metadata',
-          controls: false
+          controls: false,
+          autoplay: true
       }}
     {% endif %}
 
