--- a/sections/product-carousel.liquid
+++ b/sections/product-carousel.liquid
@@ -79,7 +79,7 @@
 
   {% if section.settings.cta_text != blank and section.settings.cta_url != blank %}
     <div class="product-carousel__cta">
-      {% render 'icon-button', url: section.settings.cta_url, label: section.settings.cta_text, icon: 'bottle.svg' %}
+      {% render 'icon-button', url: section.settings.cta_url, label: section.settings.cta_text, icon: 'drop.svg' %}
     </div>
   {% endif %}
 </section>
