--- a/assets/theme.css
+++ b/assets/theme.css
@@ -86,8 +86,8 @@ span {
 /* Product Card Styles */
 .product-card {
   flex-shrink: 0;
-  width: 300px;
-  height: 700px;
+  width: 250px;
+  height: 620px;
 }
 
 .product-card__inner {
@@ -146,6 +146,7 @@ span {
   color: var(--color-brand-cream);
   text-decoration: none;
   transition: color 0.3s ease;
+  font-weight: 400;
 }
 
 .product-card__title-link:hover {
@@ -457,11 +458,13 @@ span {
     opacity 0.3s ease 0.1s, padding-bottom 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   padding: 0;
   opacity: 0;
+  padding: 0 20px;
 }
 
 .accordion-item.active .accordion-content {
   opacity: 1;
-  max-height: 1000px; /* High value to accommodate any content size */
+  max-height: 1000px;
+  padding-bottom: 20px;
 }
 
 .product-accordion {
