--- a/sections/values-card.liquid
+++ b/sections/values-card.liquid
@@ -21,7 +21,6 @@
 
   .card-section__title {
     font-size: 48px;
-    font-weight: bold;
     color: var(--color-brand-cream);
   }
 
@@ -52,7 +51,7 @@
     /* align-items: center; */
     gap: 12px;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 400;
     color: var(--color-brand-cream);
   }
 
@@ -60,6 +59,7 @@
     font-size: 16px;
     color: var(--color-brand-cream);
     padding-left: 33px;
+    font-weight: 100;
   }
 
   .card-move-left {
@@ -122,7 +122,7 @@
           <div class="card__header">
             <h3 class="card__title">
               {% if block.settings.icon != blank %}
-                {% render 'icon', icon: block.settings.icon, class: 'card__icon', size: '20' %}
+                {% render 'icon', icon: block.settings.icon, class: 'card__icon', size: '25' %}
               {% endif %}
               {{ block.settings.title }}
             </h3>
@@ -188,7 +188,11 @@
             { "value": "play", "label": "Play" },
             { "value": "phone", "label": "Phone" },
             { "value": "email", "label": "Email" },
-            { "value": "location", "label": "Location" }
+            { "value": "location", "label": "Location" },
+            { "value": "refreshener", "label": "Refreshener" },
+            { "value": "diamond", "label": "Diamond" },
+            { "value": "flower2", "label": "Flower2" },
+            { "value": "spa", "label": "Spa" }
           ]
         },
         {
