--- a/snippets/cart.sidepanel.liquid
+++ b/snippets/cart.sidepanel.liquid
@@ -2,7 +2,7 @@
   <div class="cart-sidepanel__overlay" data-cart-close></div>
   <div class="cart-sidepanel__content">
     <div class="cart-sidepanel__header">
-      <h2 id="cart-count-header">Your Cart ({{ cart.item_count }})</h2>
+      <h2 id="cart-count-header" data-cart-title=""></h2>
       <button class="cart-sidepanel__close" data-cart-close>
         <img src="{{ 'close.svg' | asset_url }}" width="24" height="24">
       </button>
