--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="" <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
+<html lang=""> <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
   <link rel="stylesheet" href="{{ 'mobile.css' | asset_url }}" media="(max-width: 768px)">
   <link rel="stylesheet" href="{{ 'cart-sidepanel.css' | asset_url }}">
   <head>
@@ -118,6 +118,15 @@
 
       gtag('config', 'GT-MBTLFRSN');
     </script>
+    <!-- End Google tag (gtag.js) -->
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-M43NDKRG');</script>
+    <!-- End Google Tag Manager -->
 
     {% render 'schemas' %}
     {% render 'social-meta-tags' %}
@@ -137,6 +146,10 @@
         render 'breadcrumb'
       endunless
     %}
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M43NDKRG"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <main id="main-content">
       {{ content_for_layout }}
