--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -557,12 +557,17 @@
     .menu-right {
       /* text-align: center; */
     }
+
+    .menu-text {
+      margin-top: auto;
+    }
     .menu-right-msg {
       font-size: 15px;
       margin-bottom: 10px;
       text-align: left;
       /* margin: 0 auto; */
       max-width: 70%;
+      margin-top: 0;
     }
   }
 {% endstyle %}
